Fixed styling on mobile menu.

--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -241,7 +241,7 @@ ul.sub-menu li:hover {
   height: 200px;
 }
 
-#mobile-menu .menu-main-header-menu-container {
+#mobile-menu .menu-main-menu-container {
   height: 100%;
 }
 #mobile-menu .menu-main-menu {
